# IMU_Preintegration

./: .gitignore  CMakeLists.txt  README.md
data/: new_pre.txt
include/: IMU_Data.h  IMU_Preintegrator.h  so3.h
src/: IMU_Data.cpp  IMU_Preintegrator.cpp  main.cpp  so3.cpp
